@@ -3,6 +3,8 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  CHG: CollectionBrowser now fills the database inside of a thread, resulting
+       in improved performance.
   ADD: Mini track-position slider in statusbar.
   FIX: Don't try to crossfade with engines that do not support this feature. 
   ADD: XMMS visualization plugins can be configured with their GUI.
